--- a/pergola.yaml
+++ b/pergola.yaml
@@ -8,6 +8,10 @@ components:
   - 80
   ingresses: 
   - host: www
+  storage:
+  - name: storage-test
+    path: /tmp
+    size: 10M
 - name: hello-world-job
   docker:
     image: hello-world
